Trying to host paystack java with JitPack